--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,3 +2,10 @@
 // ======
 
 @import "grids";
+@import "abstractions/mixin.scss";
+@import "base/normalize.scss";
+@import "base/menus.scss";
+@import "base/header.scss";
+@import "base/main.scss";
+@import "components/pattern.scss";
+@import "components/nav.scss";
